# vaak-voice-enabled-ai-agent

./: .gitignore  .gitmodules  README.md  plan1.md
assets/: logo-animation.html
docs/: BACKEND_CODE_REVIEW_DOMAIN_AGNOSTIC_2026_01_09.md  DOMAIN_AGNOSTIC_ARCHITECTURE_ANALYSIS_2026_01_09.md  DOMAIN_AGNOSTIC_COMPREHENSIVE_ANALYSIS_2026_01_09.md  DOMAIN_AGNOSTIC_COMPREHENSIVE_AUDIT_2026_01_09.md  DOMAIN_AGNOSTIC_COMPREHENSIVE_AUDIT_2026_01_10.md  DOMAIN_AGNOSTIC_COMPREHENSIVE_AUDIT_2026_01_10_v2.md  DOMAIN_AGNOSTIC_COMPREHENSIVE_REFACTORING_PLAN_2026_01_09.md  DOMAIN_AGNOSTIC_DEEP_ANALYSIS_2026_01_09.md  DOMAIN_AGNOSTIC_FINAL_ANALYSIS_2026_01_09.md  DOMAIN_AGNOSTIC_REFACTORING_PLAN_2026_01_09.md  DOMAIN_AGNOSTIC_REFACTORING_PLAN_2026_01_10.md  DOMAIN_AGNOSTIC_REFACTORING_PLAN_2026_01_10_FINAL.md  DOMAIN_AGNOSTIC_REFACTORING_PLAN_FINAL_2026_01_10.md  INDEX.md  backend-code-review-domain-agnostic.md
plan2/: 00-EXECUTIVE-SUMMARY.md  01-CRITICAL-FIXES.md  02-HIGH-PRIORITY-FIXES.md  10-MULTILINGUAL-SUPPORT-PLAN.md  INDEX.md  (+8 more)
voice-agent-rust/: Cargo.toml
voice-agent-rust/crates/agent/: Cargo.toml
voice-agent-rust/crates/agent/src/: agent.rs  intent.rs  lib.rs  memory.rs
voice-agent-rust/crates/config/: Cargo.toml
voice-agent-rust/crates/config/src/: agent.rs  branch.rs  competitor.rs  domain.rs  gold_loan.rs  lib.rs  product.rs  prompts.rs
voice-agent-rust/crates/core/: Cargo.toml
voice-agent-rust/crates/core/src/: compliance.rs  conversation.rs  customer.rs  domain_context.rs  language.rs  lib.rs  llm_types.rs  pii.rs  voice_config.rs
voice-agent-rust/crates/core/src/personalization/: adaptation.rs  mod.rs  persona.rs  signals.rs
voice-agent-rust/crates/core/src/traits/: llm.rs  mod.rs  pipeline.rs  retriever.rs  speech.rs  text_processing.rs
voice-agent-rust/crates/llm/src/: backend.rs  lib.rs  prompt.rs  speculative.rs
voice-agent-rust/crates/pipeline/src/: lib.rs
voice-agent-rust/crates/pipeline/src/processors/: chain.rs  interrupt_handler.rs  mod.rs  sentence_detector.rs
voice-agent-rust/crates/pipeline/src/stt/: decoder.rs
voice-agent-rust/crates/pipeline/src/turn_detection/: semantic.rs
voice-agent-rust/crates/rag/src/: adapter.rs  cross_lingual.rs  domain_boost.rs  lib.rs  query_expansion.rs  reranker.rs  retriever.rs
voice-agent-rust/crates/server/: Cargo.toml
voice-agent-rust/crates/server/src/: auth.rs  http.rs  lib.rs  session.rs
voice-agent-rust/crates/tools/src/: lib.rs  registry.rs
voice-agent-rust/docs/: EARLY_EXIT_ONNX.md  MODELS.md
voice-agent-rust/scripts/: convert_indicconformer.py  convert_indicf5_onnx.py  download_models.sh
voice-agent/backend/crates/agent/: Cargo.toml
voice-agent/backend/crates/agent/src/: agent.rs  agent_config.rs  conversation.rs  fsm_adapter.rs  lead_scoring.rs  lib.rs  memory_legacy.rs  persuasion.rs  stage.rs  stage_config.rs  traits.rs  voice_session.rs
voice-agent/backend/crates/agent/src/agent/: mod.rs  processing.rs  response.rs  tools.rs
voice-agent/backend/crates/agent/src/dst/: dynamic.rs  extractor.rs  mod.rs  slots.rs
voice-agent/backend/crates/agent/src/memory/: compressor.rs  core.rs  mod.rs  recall.rs
voice-agent/backend/crates/agent/tests/: voice_pipeline_integration.rs
voice-agent/backend/crates/core/: Cargo.toml
voice-agent/backend/crates/core/src/: audio.rs  conversation.rs  customer.rs  domain_context.rs  lib.rs  llm_types.rs
voice-agent/backend/crates/core/src/domain/: mod.rs  traits.rs
voice-agent/backend/crates/core/src/personalization/: adaptation.rs  mod.rs  persona.rs  signals.rs
voice-agent/backend/crates/core/src/traits/: calculator.rs  competitors.rs  entity_types.rs  feature_provider.rs  fsm.rs  goals.rs  lead_classifier.rs  mod.rs  objection_provider.rs  objections.rs  persona_provider.rs  retriever.rs  scoring.rs  segments.rs  signals.rs  slots.rs  speech.rs  text_processing.rs  tool_arguments.rs  tool_factory.rs
voice-agent/backend/crates/llm/: Cargo.toml
voice-agent/backend/crates/llm/src/: adapter.rs  backend.rs  claude.rs  factory.rs  lib.rs  prompt.rs  speculative.rs
voice-agent/backend/crates/pipeline/: Cargo.toml
voice-agent/backend/crates/pipeline/src/: adapters.rs  orchestrator.rs
voice-agent/backend/crates/pipeline/src/stt/: candle_whisper.rs  decoder.rs  http_backend.rs  indicconformer.rs  streaming.rs
voice-agent/backend/crates/pipeline/src/stt/indicconformer/: config.rs  core.rs  mel.rs  mod.rs
voice-agent/backend/crates/pipeline/src/tts/: g2p.rs  streaming.rs
voice-agent/backend/crates/pipeline/src/turn_detection/: hybrid.rs  semantic.rs
voice-agent/backend/crates/pipeline/src/vad/: magicnet.rs  mod.rs  silero.rs
voice-agent/backend/crates/rag/: Cargo.toml
voice-agent/backend/crates/rag/src/: adapter.rs  agentic.rs  chunker.rs  compressor.rs  cross_lingual.rs  domain_boost.rs  embeddings.rs  knowledge_loader.rs  lib.rs  ollama_embeddings.rs  query_expansion.rs  reranker.rs  retriever.rs  sparse_search.rs  vector_store.rs
voice-agent/backend/crates/server/: Cargo.toml
voice-agent/backend/crates/server/src/: http.rs  lib.rs  main.rs  ptt.rs  session.rs  state.rs  webrtc.rs  websocket.rs
voice-agent/backend/crates/text_processing/: Cargo.toml
voice-agent/backend/crates/text_processing/examples/: debug_translation.rs  test_translation.rs
voice-agent/backend/crates/text_processing/src/: hindi.rs  lib.rs  pipeline.rs
voice-agent/backend/crates/text_processing/src/compliance/: checker.rs  rules.rs
voice-agent/backend/crates/text_processing/src/entities/: mod.rs
voice-agent/backend/crates/text_processing/src/grammar/: edit_distance.rs  llm_corrector.rs  mod.rs  phonetic_corrector.rs
voice-agent/backend/crates/text_processing/src/intent/: mod.rs
voice-agent/backend/crates/text_processing/src/simplifier/: abbreviations.rs
voice-agent/backend/crates/text_processing/src/slot_extraction/: mod.rs
voice-agent/backend/crates/text_processing/src/translation/: candle_indictrans2.rs  indictrans2.rs  mod.rs
voice-agent/backend/crates/transport/: Cargo.toml
voice-agent/backend/crates/transport/src/: webrtc.rs
(+715 files in other folders)
