[workspace]
members = [
    "crates/core",
    "crates/config",
    "crates/pipeline",
    "crates/rag",
    "crates/llm",
    "crates/tools",
    "crates/agent",
    "crates/server",
    "crates/transport",
    "crates/text_processing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
repository = "https://github.com/kotak/voice-agent-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# ML/AI - ONNX Runtime
ort = { version = "2.0.0-rc.9" }
ndarray = "0.16"

# ML/AI - Candle (SafeTensors, native Rust inference)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.4"
hf-hub = "0.3"

# Tokenization
tokenizers = "0.15"

# Vector search
qdrant-client = "1"

# Full-text search
tantivy = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
parking_lot = "0.12"
dashmap = "5"
once_cell = "1"
unicode-segmentation = "1.10"

# JSON Schema validation
jsonschema = "0.18"

# Audio processing
rubato = "0.14"  # Resampling
hound = "3.5"    # WAV files

# Internal crates
voice-agent-core = { path = "crates/core" }
voice-agent-config = { path = "crates/config" }
voice-agent-pipeline = { path = "crates/pipeline" }
voice-agent-rag = { path = "crates/rag" }
voice-agent-llm = { path = "crates/llm" }
voice-agent-tools = { path = "crates/tools" }
voice-agent-agent = { path = "crates/agent" }
voice-agent-transport = { path = "crates/transport" }
voice-agent-text-processing = { path = "crates/text_processing" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[profile.bench]
lto = "thin"
codegen-units = 1
