[package]
name = "voice-agent-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration management for the voice agent"

[dependencies]
voice-agent-core.workspace = true

config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile = "3"
