[package]
name = "voice-agent-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Conversational agent framework with stage-based dialog management"

[dependencies]
voice-agent-core.workspace = true
voice-agent-config.workspace = true
voice-agent-pipeline.workspace = true
voice-agent-rag.workspace = true
voice-agent-llm.workspace = true
voice-agent-tools.workspace = true
voice-agent-transport.workspace = true
voice-agent-text-processing.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
unicode-segmentation.workspace = true
regex.workspace = true  # P0 FIX: For compiled slot pattern extraction
once_cell.workspace = true  # For lazy static regex patterns
uuid = { version = "1.0", features = ["v4"] }  # For memory note IDs

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["async_tokio"] }
serde_yaml.workspace = true  # P16 FIX: For DynamicDialogueState tests

[[bench]]
name = "voice_pipeline_bench"
harness = false
