[package]
name = "voice-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for the voice agent"

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing.workspace = true
once_cell.workspace = true
# P5 FIX: High-quality audio resampling
rubato.workspace = true
# P4.3 FIX: Regex for slot extraction patterns
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
