[package]
name = "voice-agent-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Audio pipeline with VAD, STT, TTS, and turn detection"

[features]
default = []
onnx = ["dep:ort"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:safetensors"]
candle-onnx = ["dep:candle-core", "dep:candle-onnx"]
# P2-1: Audio processing (noise suppression)
noise-suppression = ["dep:nnnoiseless"]

[dependencies]
voice-agent-core.workspace = true
voice-agent-config.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true
async-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

# ML - ONNX Runtime
ort = { version = "2.0.0-rc.10", optional = true }
ndarray.workspace = true
tokenizers.workspace = true

# ML - Candle (native Rust inference with SafeTensors)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
# ML - Candle ONNX (pure Rust ONNX file support)
candle-onnx = { version = "0.8", optional = true }

# Audio
rubato.workspace = true
hound.workspace = true
realfft = "3.3"
# P2-1: Noise suppression (pure Rust RNNoise port)
nnnoiseless = { version = "0.5", optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
