[package]
name = "voice-agent-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RAG with hybrid search and early-exit cross-encoder reranking"

[features]
default = []
onnx = ["dep:ort"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:safetensors", "dep:hf-hub"]

[dependencies]
voice-agent-core.workspace = true
voice-agent-config.workspace = true
voice-agent-llm.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true

# Vector store
qdrant-client.workspace = true

# Search
tantivy.workspace = true

# ML - ONNX Runtime
ort = { version = "2.0.0-rc.9", optional = true }
ndarray.workspace = true
tokenizers.workspace = true

# ML - Candle (native Rust inference with SafeTensors)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
