[package]
name = "voice-agent-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebSocket and HTTP server for voice agent"

[[bin]]
name = "voice-agent"
path = "src/main.rs"

[features]
default = []
# WebRTC support (heavy: ~200 deps)
webrtc = ["dep:voice-agent-transport"]
# OpenTelemetry tracing (heavy: tonic/grpc)
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies]
voice-agent-core.workspace = true
voice-agent-config.workspace = true
voice-agent-pipeline.workspace = true
voice-agent-rag.workspace = true
voice-agent-llm.workspace = true
voice-agent-tools.workspace = true
voice-agent-agent.workspace = true
voice-agent-persistence.workspace = true
voice-agent-text-processing.workspace = true
# Optional heavy crates
voice-agent-transport = { workspace = true, optional = true }

# Web framework
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true, features = ["timeout", "limit"] }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }

# Async
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
futures.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# HTTP client for health checks
reqwest.workspace = true

# Utilities
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono.workspace = true
base64 = "0.21"
once_cell.workspace = true
regex = "1.10"

# Observability
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
# Optional: OpenTelemetry (heavy)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
