[package]
name = "voice-agent-text-processing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Text processing pipeline for voice agent (grammar, translation, PII, compliance)"

[features]
# Enable Candle by default for translation to work
default = ["candle"]
# Candle-based IndicTrans2 translation (native Rust, recommended)
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:safetensors", "dep:sentencepiece"]
# Legacy ONNX-based IndicTrans2 translation
onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers"]

[dependencies]
# Core types
voice-agent-core = { path = "../core" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# NLP
regex.workspace = true
unicode-segmentation.workspace = true

# ML - Candle (for native IndicTrans2)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
sentencepiece = { version = "0.12", optional = true }

# ML - ONNX Runtime (legacy, for IndicTrans2)
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

# HTTP client for gRPC fallback
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
once_cell.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
